<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/movie">
    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/poster_height"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/movie_poster_description"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:gravity="center"
        android:text="@string/movie_title"
        android:textSize="@dimen/movie_title"
        android:textColor="@color/movie_text"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_marginStart="@dimen/between_poster_and_text">
        <TextView
            android:id="@+id/release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_release_date_title"
            android:textSize="@dimen/movie_text"
            android:textColor="@color/movie_text"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/release_date_title"
            android:text="@string/movie_release_date"
            android:layout_marginStart="@dimen/between_text_title_and_text"
            android:textSize="@dimen/movie_text"
            android:textColor="@color/movie_text"/>
        <TextView
            android:id="@+id/genres_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_genres_title"
            android:layout_below="@id/release_date_title"
            android:textSize="@dimen/movie_text"
            android:textColor="@color/movie_text"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/genres_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_genres"
            android:layout_marginStart="@dimen/between_text_title_and_text"
            android:layout_below="@id/release_date"
            android:layout_toEndOf="@id/genres_list_title"
            android:textSize="@dimen/movie_text"
            android:textColor="@color/movie_text" />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/genres_list"
            android:text="@string/movie_details"
            android:textColor="@color/movie_text"/>
    </RelativeLayout>
</RelativeLayout>